--- a/888repair/Views/Repair/ReplyRepairIndex.cshtml
+++ b/888repair/Views/Repair/ReplyRepairIndex.cshtml
@@ -52,9 +52,9 @@
 </body>
 <script type="text/html" id="ID-table-demo-css-user">
     <ul>
-        <li><strong style="font-weight:400;font-size:small">【SystemCategory系统类别】: {{= d.SystemCategory }}</strong> </li>
-        <li><strong style="font-weight:400;font-size:small">【Building大楼别】:{{= d.Building }}</strong> </li>
-        <li><strong style="font-weight:400;font-size:small">【Loaction位置】:{{= d.Loaction }}</strong> </li>
+        <li><strong style="font-weight:400;font-size:small">【系统类别】: {{= d.SystemCategory }}</strong> </li>
+        <li><strong style="font-weight:400;font-size:small">【大楼别】:{{= d.Building }}</strong> </li>
+        <li><strong style="font-weight:400;font-size:small">【位置】:{{= d.Loaction }}</strong> </li>
     </ul>
 </script>
 <script type="text/html" id="ID-table-demo-css-user2">
